# passwordmanager

./: .gitignore  CMakeLists.txt  data.csv  database.cpp  database.h  decrypt.cpp  decrypt.h  defines.h  encrypt.cpp  encrypt.h  init.h  main.cpp  outputs.cpp  outputs.h  temp
Qt/: entrie.cpp  entrie.h  firstLogin.cpp  firstLogin.h  login.cpp  login.h  main.cpp  mainMenu.cpp  mainMenu.h  passwordgenerator.cpp  passwordgenerator.h  settings.cpp  settings.h  window.cpp  window.h
backend/: back.cpp  back.h  data.csv  data.db  database.cpp  database.h  decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h  init.cpp  init.h  masterpassword.cpp  masterpassword.h  sql.cpp  sql.h
release/: passwordmanager
sqlBackend/: data.db  masterpassword.cpp  masterpassword.h  sql.cpp  sql.h
